2019-08-05
- Fix nfdump.1 man page. #175
- Fix off by 1 array. #173
- Fix use after free in ModifyCompressFile
- Add bound checks in AddExporterStat #174
- Add bound checks in AddSamplerInfo #176
- Add bound checks in AddExporterInfo
- Fix checks in InsertExtensionMap #177
- Remove COMPAT15 code - should no longer be needed.
- Move version to v1.6.18
- Merge pull request #167
- Cleanup old code
- Replace depricated pcap_lookupdev call in nfpcapd

2019-07-31
- Add early record size sanity check also for nfprofile, nfanon and nfreplay

2019-07-26
- nfpcapd cleanup, add some more monitoring
- Fix hbo_exporter.c:249_1 segfault 
- Fix hbo_nffile_inline.c:85_1 segfault
- Fix hbo_nfx.c:216_3 segfault
- Update minilzo to v2.10
- Change to safe lzo decompress function

2019-07-25
- Rework nfpcapd and add it officially to the nfdump collection.
- Add nfpcapd man page
- Fix potential unsigned integer underflow #171

2019-07-16
- Add latency extension if dumping flowcache

2019-07-15
- Fix typos
- Fix exporter struct inconsistancies. Coredump on ARM otherwise.

2019-07-02
- Add ipfix element #150, #151 unix time start/end
- Fix display bug raw record

2019-06-01
- Add ipfix dyn element handling.
- Add empty m4 directory - keep autoconf happy

2019-06-01
- Fix issue #162 - ipfix mpls sequece.
- Fix issue #156 - print flowtable index error

2019-03-17
- Fix spec file
- Remove non thread safe logging in nfpcapd

2018-11-24
- Fix protocol tag for protocol 87 - TCF - #130
- Add TCP flags ECN,CVR - #132
- Fix some error messages to be printed to the correct stream #135
- Add missing -M command line help to nfcapd
- Remove padding byte warning in log #141
- Fix bug to accept -y compression flag in nfcapd. - #145

2018-06-24
- Fix bookkeeper type - use key_t
- Add multiple packet repeaters to nfcapd/sfcapd. Up to 8 repeaters (-R) can be defined.
- Ignore OSX .DS_Store files in -R file list
- Add CISCO ASA elements initiatorPackets (298) responderPackets (299)